--- a/catalog/transformer/catalog-transformer-video-input/pom.xml
+++ b/catalog/transformer/catalog-transformer-video-input/pom.xml
@@ -35,7 +35,7 @@
         </dependency>
         <dependency>
             <groupId>org.apache.tika</groupId>
-            <artifactId>tika-parsers</artifactId>
+            <artifactId>tika-parsers-standard-package</artifactId>
         </dependency>
         <dependency>
             <groupId>net.sf.saxon</groupId>
