--- a/platform/mime/tika/platform-mime-tika-resolver/pom.xml
+++ b/platform/mime/tika/platform-mime-tika-resolver/pom.xml
@@ -72,6 +72,7 @@
                             javax.xml.transform.sax,
                             org.apache.commons.lang,
                             org.apache.commons.io,
+                            org.apache.commons.io.*,
                             org.slf4j,
                             org.slf4j.ext,
                             org.osgi.framework,
