--- a/catalog/catalog-app/pom.xml
+++ b/catalog/catalog-app/pom.xml
@@ -74,6 +74,11 @@
     <dependencies>
         <dependency>
             <groupId>ddf.platform</groupId>
+            <artifactId>preferences-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>ddf.platform</groupId>
             <artifactId>preferences-impl</artifactId>
             <version>${project.version}</version>
         </dependency>
