--- a/pom.xml
+++ b/pom.xml
@@ -292,7 +292,7 @@
         <servicemix.specs.version>2.9.0</servicemix.specs.version>
         <servlet-api.version>3.1.0</servlet-api.version>
         <smtp.client.version>1.7.1</smtp.client.version>
-        <solr.version>8.6.3</solr.version>
+        <solr.version>8.6.1</solr.version>
         <solr.docs.version>8_6</solr.docs.version>
         <solr.httpclient.version>4.5.10</solr.httpclient.version>
         <solr.httpcore.version>4.4.12</solr.httpcore.version>
@@ -337,7 +337,7 @@
         <org.json.version>20170516</org.json.version>
 
         <!--temporary solr download url> -->
-        <solr.download.url>https://archive.apache.org/dist</solr.download.url>
+        <solr.download.url>http://artifacts.phx.connexta.com/repository/archive.apache.org</solr.download.url>
 
         <!-- SonarQube Properties -->
         <sonar.coverage.jacoco.xmlReportPaths>${project.build.directory}/site/${project.report.output.directory}/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
