--- a/distribution/solr-distro/pom.xml
+++ b/distribution/solr-distro/pom.xml
@@ -69,31 +69,41 @@
                 </configuration>
             </plugin>
             <plugin>
-                <groupId>com.googlecode.maven-download-plugin</groupId>
-                <artifactId>download-maven-plugin</artifactId>
-                <version>1.7.1</version>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>wagon-maven-plugin</artifactId>
+                <version>2.0.2</version>
                 <executions>
                     <execution>
+                        <id>download-solr</id>
                         <phase>generate-resources</phase>
                         <goals>
-                            <goal>wget</goal>
+                            <goal>download-single</goal>
                         </goals>
+                        <configuration>
+                            <url>${solr.download.url}/lucene/solr/${solr.version}</url>
+                            <fromFile>solr-${solr.version}.zip</fromFile>
+                            <toDir>${project.build.directory}</toDir>
+                        </configuration>
                     </execution>
                 </executions>
-                <configuration>
-                    <url>
-                        ${solr.download.url}/lucene/solr/${solr.version}/solr-${solr.version}.zip
-                    </url>
-                    <unpack>true</unpack>
-                    <skipCache>true</skipCache>
-                    <readTimeOut>10000</readTimeOut>
-                    <maxLockWaitTime>10000</maxLockWaitTime>
-                    <overwrite>true</overwrite>
-                    <retries>5</retries>
-                    <failOnError>true</failOnError>
-                    <sha512>fd5aca06748b7902cc81f8d4ab66fb4c236fec0a0ab6b13b1c838e3f9ed2f36b72ddc9c045c4452e808956b514ba5ee5ac6d07c93535537036fdc17066762307</sha512>
-                    <checkSignature>true</checkSignature>
-                </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <version>1.8</version>
+                <executions>
+                    <execution>
+                    <phase>generate-resources</phase>
+                    <configuration>
+                    <tasks>
+                        <echo message="unzipping file" />
+                        <unzip src="${project.build.directory}/solr-${solr.version}.zip" dest="target/" />
+                   </tasks>
+                   </configuration>
+                   <goals>
+                       <goal>run</goal>
+                   </goals>
+                   </execution>
+                </executions>
             </plugin>
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
