--- a/distribution/ddf-common/src/main/resources-filtered/etc/custom.system.properties
+++ b/distribution/ddf-common/src/main/resources-filtered/etc/custom.system.properties
@@ -85,7 +85,7 @@ solr.password=admin
 solr.query.anytext.fields=metadata,title,description,ext.extracted.text
 
 # Comma-separated list of metacard types that do not support optimistic updates.
-solr.commit.nrt.metacardTypes=workspace,metacard.query,metacard.list,query-template,attribute-group,resource-note
+solr.commit.nrt.metacardTypes=workspace,metacard.query,metacard.list,query-template,attribute-group,resource-note,ddf.preferences
 
 # Comma-separated list of metacard fields that should never show up as search result highlights
 solr.highlight.blacklist=metacard-tags
