--- a/platform/pom.xml
+++ b/platform/pom.xml
@@ -201,5 +201,6 @@
         <module>sync-installer</module>
         <module>resource-bundle-locator</module>
         <module>http-filter-api</module>
+        <module>preferences</module>
     </modules>
 </project>
