--- a/distribution/ddf-common/src/main/resources/etc/org.ops4j.pax.logging.cfg
+++ b/distribution/ddf-common/src/main/resources/etc/org.ops4j.pax.logging.cfg
@@ -68,6 +68,14 @@ log4j2.logger.cdmLogger.appenderRef.cdm.ref = cdm
 log4j2.logger.cdmLogger.appenderRef.syslog.ref = syslog
 log4j2.logger.cdmLogger.appenderRef.osgi-platformLogging.ref = osgi-platformLogging
 
+# queryLogger
+log4j2.logger.cdmLogger.name = queryLogger
+log4j2.logger.cdmLogger.level = INFO
+log4j2.logger.cdmLogger.additivity = false
+log4j2.logger.cdmLogger.appenderRef.cdm.ref = queryMetrics
+log4j2.logger.cdmLogger.appenderRef.syslog.ref = syslog
+log4j2.logger.cdmLogger.appenderRef.osgi-platformLogging.ref = osgi-platformLogging
+
 # org.apache.solr
 log4j2.logger.org_apache_solr.name = org.apache.solr
 log4j2.logger.org_apache_solr.level = INFO
@@ -187,6 +195,20 @@ log4j2.appender.contentDirectoryMonitor.policies.size.type = SizeBasedTriggering
 log4j2.appender.contentDirectoryMonitor.policies.size.size = 20MB
 log4j2.appender.contentDirectoryMonitor.strategy.type = DefaultRolloverStrategy
 log4j2.appender.contentDirectoryMonitor.strategy.max = 10
+
+# queryMetrics
+log4j2.appender.queryMetrics.type = RollingFile
+log4j2.appender.queryMetrics.name = queryMetrics
+log4j2.appender.queryMetrics.fileName = ${karaf.log}/query_metrics.log
+log4j2.appender.queryMetrics.filePattern = ${karaf.log}/query_metrics.log-%d{yyyy-MM-dd-HH}-%i.log.gz
+log4j2.appender.queryMetrics.append = true
+log4j2.appender.queryMetrics.layout.type = PatternLayout
+log4j2.appender.queryMetrics.layout.pattern = ${log4j2.pattern}
+log4j2.appender.queryMetrics.policies.type = Policies
+log4j2.appender.queryMetrics.policies.size.type = SizeBasedTriggeringPolicy
+log4j2.appender.queryMetrics.policies.size.size = 20MB
+log4j2.appender.queryMetrics.strategy.type = DefaultRolloverStrategy
+log4j2.appender.queryMetrics.strategy.max = 10
 
 # securityMain
 log4j2.appender.securityMain.type = RollingFile
