Add LIKE support to SolrQueryFilterVisitor

--- a/platform/solr/solr-query/pom.xml
+++ b/platform/solr/solr-query/pom.xml
@@ -98,5 +98,10 @@
             <groupId>commons-lang</groupId>
             <artifactId>commons-lang</artifactId>
         </dependency>
+        <dependency>
+            <groupId>ddf.catalog.core</groupId>
+            <artifactId>catalog-core-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 </project>
