Fixed log naming bug

--- a/distribution/ddf-common/src/main/resources/etc/org.ops4j.pax.logging.cfg
+++ b/distribution/ddf-common/src/main/resources/etc/org.ops4j.pax.logging.cfg
@@ -69,12 +69,12 @@ log4j2.logger.cdmLogger.appenderRef.syslog.ref = syslog
 log4j2.logger.cdmLogger.appenderRef.osgi-platformLogging.ref = osgi-platformLogging
 
 # queryLogger
-log4j2.logger.cdmLogger.name = queryLogger
-log4j2.logger.cdmLogger.level = INFO
-log4j2.logger.cdmLogger.additivity = false
-log4j2.logger.cdmLogger.appenderRef.cdm.ref = queryMetrics
-log4j2.logger.cdmLogger.appenderRef.syslog.ref = syslog
-log4j2.logger.cdmLogger.appenderRef.osgi-platformLogging.ref = osgi-platformLogging
+log4j2.logger.queryLogger.name = queryLogger
+log4j2.logger.queryLogger.level = INFO
+log4j2.logger.queryLogger.additivity = false
+log4j2.logger.queryLogger.appenderRef.cdm.ref = queryMetrics
+log4j2.logger.queryLogger.appenderRef.syslog.ref = syslog
+log4j2.logger.queryLogger.appenderRef.osgi-platformLogging.ref = osgi-platformLogging
 
 # org.apache.solr
 log4j2.logger.org_apache_solr.name = org.apache.solr
