Added ability to generate known uuid

--- a/platform/preferences/preferences-impl/pom.xml
+++ b/platform/preferences/preferences-impl/pom.xml
@@ -57,6 +57,11 @@
             <artifactId>gson-support</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>ddf.platform.util</groupId>
+            <artifactId>util-uuidgenerator-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
