Add default sort-by for ResultIterable

--- a/catalog/core/catalog-core-urlresourcereader/pom.xml
+++ b/catalog/core/catalog-core-urlresourcereader/pom.xml
@@ -114,6 +114,7 @@
                             ddf.catalog.operation.impl,
                             ddf.catalog.data.impl.*,
                             ddf.catalog.util.impl,
+                            ddf.catalog.filter.impl,
                             org.codice.ddf.security.common.jaxrs
                         </Private-Package>
                         <Import-Package>
