--- a/catalog/transformer/catalog-transformer-resource/pom.xml
+++ b/catalog/transformer/catalog-transformer-resource/pom.xml
@@ -48,6 +48,7 @@
                             ddf.catalog.operation.impl,
                             ddf.catalog.resource.impl,
                             ddf.catalog.util.impl,
+                            ddf.catalog.filter.impl,
                             ddf.catalog.data.impl.*
                         </Private-Package>
                         <DDF-Mime-Type>application/octet-stream</DDF-Mime-Type>
