--- a/catalog/core/catalog-core-impl/pubsub/pom.xml
+++ b/catalog/core/catalog-core-impl/pubsub/pom.xml
@@ -119,6 +119,7 @@
                             ddf.catalog.operation.impl,
                             ddf.catalog.data.impl.*,
                             ddf.catalog.util.impl,
+                            ddf.catalog.filter.impl,
                             org.codice.ddf.platform.util
                         </Private-Package>
                     </instructions>
