--- a/catalog/core/pom.xml
+++ b/catalog/core/pom.xml
@@ -90,5 +90,6 @@
         <module>catalog-core-metacardtype</module>
         <module>catalog-core-attachment</module>
         <module>catalog-core-attachment-impl</module>
+        <module>catalog-core-requiredattributes</module>
     </modules>
 </project>
