--- a/distribution/docs/src/main/resources/jbake.properties
+++ b/distribution/docs/src/main/resources/jbake.properties
@@ -19,13 +19,13 @@ template.subSecuring.file=managing.ftl
 template.installing.file=managing.ftl
 template.subInstalling.file=managing.ftl
 template.installingIntro.file=managing.ftl
-template.configuringIntro.file=build/configuring.ftl
-template.configuration.file=build/configuring.ftl
-template.subConfiguration.file=build/configuring.ftl
-template.configuringAdminConsole.file=build/configuring.ftl
-template.configuringCommandConsole.file=build/configuring.ftl
-template.configuringConfigFile.file=build/configuring.ftl
-template.configuringImport.file=build/configuring.ftl
+template.configuringIntro.file=configuring.ftl
+template.configuration.file=configuring.ftl
+template.subConfiguration.file=configuring.ftl
+template.configuringAdminConsole.file=configuring.ftl
+template.configuringCommandConsole.file=configuring.ftl
+template.configuringConfigFile.file=configuring.ftl
+template.configuringImport.file=configuring.ftl
 template.runningIntro.file=managing.ftl
 template.startingIntro.file=managing.ftl
 template.maintainingIntro.file=managing.ftl
@@ -40,13 +40,13 @@ template.using.file=using.ftl
 template.subUsing.file=using.ftl
 template.integratingIntro.file=integrating.ftl
 template.federationIntro.file=integrating.ftl
-template.endpoint.file=build/endpoints.ftl
-template.endpointService.file=build/endpoints.ftl
-template.endpointIntro.file=build/endpoints.ftl
-template.eventing.file=build/eventing.ftl
-template.source.file=build/sources.ftl
-template.sourceIntro.file=build/sources.ftl
-template.sourceService.file=build/sources.ftl
+template.endpoint.file=endpoints.ftl
+template.endpointService.file=endpoints.ftl
+template.endpointIntro.file=endpoints.ftl
+template.eventing.file=eventing.ftl
+template.source.file=sources.ftl
+template.sourceIntro.file=sources.ftl
+template.sourceService.file=sources.ftl
 template.developingIntro.file=architectures.ftl
 template.catalogFrameworkIntro.file=architectures.ftl
 template.catalogFramework.file=architectures.ftl
