--- a/distribution/docs/pom.xml
+++ b/distribution/docs/pom.xml
@@ -198,7 +198,7 @@
             <plugin>
                 <groupId>org.jbake</groupId>
                 <artifactId>jbake-maven-plugin</artifactId>
-                <version>0.3.3</version>
+                <version>2.7.0-rc.7</version>
                 <executions>
                     <execution>
                         <phase>generate-resources</phase>
@@ -213,19 +213,9 @@
                 </configuration>
                 <dependencies>
                     <dependency>
-                        <groupId>org.freemarker</groupId>
-                        <artifactId>freemarker</artifactId>
-                        <version>2.3.30</version>
-                    </dependency>
-                    <dependency>
                         <groupId>org.asciidoctor</groupId>
-                        <artifactId>asciidoctor-maven-plugin</artifactId>
-                        <version>${asciidoctor.maven.plugin.version}</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.pegdown</groupId>
-                        <artifactId>pegdown</artifactId>
-                        <version>1.6.0</version>
+                        <artifactId>asciidoctorj</artifactId>
+                        <version>2.5.13</version>
                     </dependency>
                 </dependencies>
             </plugin>
