--- a/pom.xml
+++ b/pom.xml
@@ -846,17 +846,17 @@
                         <encoding>${project.build.sourceEncoding}</encoding>
                         <compilerArgs>
                             <arg>-XDcompilePolicy=simple</arg>
-                            <arg>-Xplugin:ErrorProne</arg>
+<!--                            <arg>-Xplugin:ErrorProne</arg>-->
                             <arg>--add-exports</arg>
                             <arg>java.base/sun.security.x509=ALL-UNNAMED</arg>
                         </compilerArgs>
-                        <annotationProcessorPaths>
-                            <path>
-                                <groupId>com.google.errorprone</groupId>
-                                <artifactId>error_prone_core</artifactId>
-                                <version>2.4.0</version>
-                            </path>
-                        </annotationProcessorPaths>
+<!--                        <annotationProcessorPaths>-->
+<!--                            <path>-->
+<!--                                <groupId>com.google.errorprone</groupId>-->
+<!--                                <artifactId>error_prone_core</artifactId>-->
+<!--                                <version>2.4.0</version>-->
+<!--                            </path>-->
+<!--                        </annotationProcessorPaths>-->
                     </configuration>
                 </plugin>
                 <plugin>
