--- a/distribution/ddf-common/src/main/resources/etc/org.apache.karaf.log.cfg
+++ b/distribution/ddf-common/src/main/resources/etc/org.apache.karaf.log.cfg
@@ -36,4 +36,4 @@ size = 500
 # Previous pattern:
 # %d{ABSOLUTE} | %-5.5p | %-16.16t | %-32.32c{1} | %-32.32C %4L | %X{bundle.id} - %X{bundle.name} - %X{bundle.version} | %m%n
 #
-pattern = %d{ABSOLUTE} | %-5.5p | %-16.16t | %-40.40C %4L | %-20.20X{bundle.name} | %m%n
+pattern = %d{ABSOLUTE} | %-5.5p | %-16.16t | %-40.40C %4L | %-20.20X{bundle.name} | {%m}%n
