--- a/catalog/common/catalog-common-video-thumbnail/pom.xml
+++ b/catalog/common/catalog-common-video-thumbnail/pom.xml
@@ -49,6 +49,11 @@
             <artifactId>jakarta.activation-api</artifactId>
             <version>${jakarta.activation.version}</version>
         </dependency>
+        <dependency>
+            <groupId>ddf.platform.util</groupId>
+            <artifactId>util-uuidgenerator-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
