--- a/catalog/rest/catalog-rest-impl/pom.xml
+++ b/catalog/rest/catalog-rest-impl/pom.xml
@@ -27,8 +27,8 @@
         <dependencies>
             <dependency>
                 <groupId>org.hamcrest</groupId>
-                <artifactId>hamcrest-core</artifactId>
-                <version>${hamcrest-all.version}</version>
+                <artifactId>hamcrest</artifactId>
+                <version>${hamcrest.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.objenesis</groupId>
