--- a/catalog/common/catalog-common-video-thumbnail/pom.xml
+++ b/catalog/common/catalog-common-video-thumbnail/pom.xml
@@ -33,7 +33,7 @@
         </dependency>
         <dependency>
             <groupId>org.osgi</groupId>
-            <artifactId>org.osgi.core</artifactId>
+            <artifactId>osgi.core</artifactId>
             <version>${osgi.enterprise.version}</version>
         </dependency>
         <dependency>
