--- a/features/test-utilities/pom.xml
+++ b/features/test-utilities/pom.xml
@@ -61,6 +61,11 @@
             <artifactId>security-encryption-crypter</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.groovy</groupId>
+            <artifactId>groovy-all</artifactId>
+            <version>${groovy.version}</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
